[project]
name = "civic-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.4.0",
    "duckduckgo-search>=8.1.1",
    "grandalf>=0.8",
    "langchain>=0.1.0",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "langgraph>=0.6.7",
    "openai>=1.0.0",
    "pypdf>=3.0.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "tabulate>=0.9.0",
    "tiktoken>=0.11.0",
    "typing-extensions>=4.15.0",
]
